# dsctl

./: README.md  dsctl.py  pyproject.toml  requirements.txt  test_dsctl.py
.github/workflows/: ci.yml
samples/: run.sh  sample-with-meta.json  sample.json
